# discordbot

./: .gitignore  Dockerfile  README.md  bot.py  constants.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  table.py  utils.py
.github/workflows/: python-app.yml
bot_data/: game_data.db
cogs/: __init__.py  greetings.py
cogs/admin/: admin.py
cogs/components/: discord_embed.py
cogs/game_free/: game_free.py
cogs/money_manage/: manage.py
cogs/money_manage/transaction/: service.py
cogs/music/: album.py  controller.py  errors.py  exceptions.py  extractor.py  manager.py  music.py  playlist.py  search.py  song.py  soundcloud.py
cogs/music/core/: album.py  playlist.py  song.py
cogs/music/services/: soundcloud_service.py
cogs/music/services/spotify/: album.py  playlist.py  search.py  service.py  spotify_type.py  track.py
cogs/music/services/youtube/: service.py
cogs/music/view/: view.py
cogs/tts/: tts.py  tts_constants.py
core/: error_handler.py  exceptions.py
mapper/: jsonmapper.py
patterns/: observe.py  singleton.py
utils/: __init__.py  http_request.py  utils.py  voice_helpers.py
